Env variables changes

--- a/Makefile.outtree
+++ b/Makefile.outtree
@@ -7,10 +7,10 @@ obj-m += rtcomm.o
 
 
 all: rtcomm_test rtcomm_ipc_size rtcomm_ipc_test
-	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C $(LINUX_SRC) M=$(PWD) modules
+	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C $(URTU_LINUX_SRC) M=$(PWD) modules
 
 clean:
-	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C $(LINUX_SRC) M=$(PWD) clean
+	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C $(URTU_LINUX_SRC) M=$(PWD) clean
 	rm rtcomm_test
 	rm rtcomm_ipc_size
 	rm rtcomm_ipc_test
@@ -28,7 +28,7 @@ rtcomm_ipc_test: rtcomm_ipc_test.c
 deploy: all 
 	@scp rtcomm.ko rtcomm_test rtcomm_ipc_size rtcomm_ipc_test root@netico-urtu:
 
-ifndef LINUX_SRC
+ifndef URTU_LINUX_SRC
 	$(error LINUX_SRC variable is not set)
 endif
 
